# LIEF

./: .appveyor.yml  .clang-format  .clang-format-ignore  .clang-tidy  .clang-tidy-core.yaml  .clangd  .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  AUTHORS  Acknowledgements  CHANGELOG  CMakeLists.txt  Dockerfile  LICENSE  LIEF.pc.in  LIEFConfig.cmake.in  MANIFEST.in  README.md  circle.yml  create.py  setup.cfg  setup.py
api/python/: CMakeLists.txt  MANIFEST.in  PyIOStream.cpp  PyIOStream.hpp  README  README.rst  __init__.py.in  build-requirements.txt  config-default.toml  encoding.cpp  encoding.hpp  enums_wrapper.hpp  pyErr.cpp  pyErr.hpp  pyExceptions.cpp  pyHash.cpp  pyIterators.cpp  pyIterators.hpp  pyJson.cpp  pyLIEF.cpp  pyLIEF.hpp  pyLogger.cpp  pyObject.cpp  pyUtils.cpp  pyproject.toml  setup.cfg  setup.py  setup.py.in  ty.toml
api/rust/: CMakeLists.txt  autocxx_ffi.rs
doc/: CMakeLists.txt  requirements.txt
doc/doxygen/: Doxyfile  Doxyfile.in  bootstrap.min.css  doxy-boot.js  doxygen_index.md  footer.html  header.html  index.doxygen  welcome.html
doc/sphinx/: Intro.rst  _cross_api.rst  changelog.rst  compilation.rst  conf.py  conf.py.in  error_handling.rst  getting_started.rst  index.rst  installation.rst  intro.rst  references.rst
examples/: CMakeLists.txt  python  rust
examples/c/: CMakeLists.txt  elf_reader.c  macho_reader.c  pe_reader.c
examples/cmake/: CMakeLists.txt  README.rst  main.cpp
examples/cpp/: CMakeLists.txt  abstract_reader.cpp  art_reader.cpp  benchmark.cpp  coredump.cpp  dex_reader.cpp  disassembler.cpp  dwarf_editor.cpp  dwarf_inspect.cpp  dyld_shared_cache_reader.cpp  elf_add_section.cpp  elf_builder.cpp  elf_reader.cpp  elf_section_rename.cpp  elf_strip.cpp  elf_symbols.cpp  logging.cpp  macho_builder.cpp  macho_from_memory.cpp  macho_instrumentation.cpp  macho_reader.cpp  oat_reader.cpp  objc_inspect.cpp  pdb_inspect.cpp  pe_authenticode_check.cpp  pe_builder.cpp  pe_reader.cpp  vdex_reader.cpp
examples/python/: abstract_json.py  abstract_reader.py  dex_reader.py  elf_bin2lib.py  elf_reader.py  elf_unstrip.py  entropy.py  json_dump.py  macho_parser_tweak.py  macho_reader.py  nm.py  oat_reader.py  pe_authenticode.py  pe_from_scratch.py  pe_reader.py  pe_resources_manager.py  vdex_json.py  vdex_reader.py
fuzzing/: CMakeLists.txt  clean-corpus.py  elf_fuzzer.cpp  macho_fuzzer.cpp  pe_fuzzer.cpp  pkcs7_signature.cpp  pme_fuzzer.cpp
plugins/binaryninja/: .clang-tidy-core.yaml  CMakeLists.txt  README.md
plugins/ghidra/: CMakeLists.txt  README.md  build.gradle  extension.properties  settings.gradle
profiling/: CMakeLists.txt  elf_profiler.cpp  macho_profiler.cpp  oat_profiler.cpp  pe_profiler.cpp  pe_profilier.cpp
src/: CMakeLists.txt  DebugDeclOpt.cpp  Object.cpp  Object.tcc  Visitable.cpp  Visitable.tcc  Visitor.cpp  compiler_support.h.in  endianness_support.cpp  errors.cpp  exception.cpp  fmt_formatter.hpp  frozen.hpp  hash_stream.cpp  hash_stream.hpp  internal_utils.cpp  internal_utils.hpp  intmem.h  iostream.cpp  json_api.cpp  lief-pch.hpp  logging.cpp  logging.hpp  mbedtls_init.cpp  mbedtls_init.hpp  mbedtls_wraps.h  messages.hpp  overflow_check.hpp  overload_cast.hpp  paging.cpp  paging.hpp  profiling.hpp  range.cpp  threading_alt.cpp  threading_alt.h  utils.cpp
src/ART/: CMakeLists.txt  Convert.cpp  EnumToString.cpp  File.cpp  Header.cpp  Header.tcc  Parser.cpp  Parser.tcc  Structures.cpp  Structures.hpp  hash.cpp  json.cpp  json_api.cpp  json_internal.hpp  utils.cpp
src/Abstract/: Binary.cpp  CMakeLists.txt  EnumToString.cpp  Function.cpp  Header.cpp  Parser.cpp  Relocation.cpp  Section.cpp  Section.tcc  Symbol.cpp  Visitor.cpp  debug_info.cpp  hash.cpp  json.cpp  json_api.cpp  json_internal.hpp
src/BinaryStream/: ASN1Reader.cpp  BinaryStream.cpp  CMakeLists.txt  Convert.cpp  FileStream.cpp  MemoryStream.cpp  SpanStream.cpp  VectorStream.cpp  intmem.h
src/COFF/: AuxiliarySymbol.cpp  BigObjHeader.cpp  Binary.cpp  Header.cpp  Parser.cpp  RegularHeader.cpp  Relocation.cpp  Section.cpp  Symbol.cpp  structures.hpp  utils.cpp
src/DEX/: CMakeLists.txt  Class.cpp  CodeInfo.cpp  Convert.cpp  EnumToString.cpp  Field.cpp  File.cpp  Header.cpp  Header.tcc  MapItem.cpp  MapList.cpp  Method.cpp  Parser.cpp  Parser.tcc  Prototype.cpp  Structures.hpp  Type.cpp  hash.cpp  instructions.cpp  json.cpp  json_api.cpp  json_internal.hpp  utils.cpp
src/DWARF/: dwarf.cpp
src/ELF/: AndroidNote.cpp  Binary.cpp  Binary.tcc  BinaryDyn.tcc  Builder.cpp  Builder.tcc  CMakeLists.txt  Convert.cpp  CorePrPsInfo.cpp  CorePrPsInfo.tcc  DynamicEntry.cpp  DynamicEntryArray.cpp  DynamicEntryAuxiliary.cpp  DynamicEntryFilter.cpp  DynamicEntryFlags.cpp  DynamicEntryLibrary.cpp  DynamicEntryRpath.cpp  DynamicEntryRunPath.cpp  DynamicSharedObject.cpp  ELFConvert.cpp  EnumToString.cpp  ExeLayout.hpp  GnuHash.cpp  Header.cpp  Layout.cpp  Layout.hpp  Note.cpp  NoteDetails.cpp  ObjectFileLayout.hpp  Parser.cpp  Parser.tcc  ProcessorFlags.cpp  Relocation.cpp  RelocationSizes.cpp  RelocationSizes.hpp  RelocationStrings.cpp  Section.cpp  Segment.cpp  SizingInfo.hpp  Structures.hpp  (+18 more)
src/MachO/: AtomInfo.cpp  Binary.cpp  Binary.tcc  BinaryParser.cpp  BinaryParser.tcc  BindingInfo.cpp  BindingInfoIterator.cpp  BuildToolVersion.cpp  BuildVersion.cpp  Builder.cpp  Builder.tcc  CMakeLists.txt  ChainedBindingInfo.cpp  ChainedBindingInfoList.cpp  ChainedBindingInfoList.hpp  ChainedFixup.cpp  ChainedFixup.hpp  ChainedPointerAnalysis.cpp  CodeSignature.cpp  CodeSignatureDir.cpp  Convert.cpp  DataCodeEntry.cpp  DataInCode.cpp  DyldBindingInfo.cpp  DyldChainedFixups.cpp  DyldChainedFixupsCreator.cpp  DyldChainedFormat.cpp  DyldEnvironment.cpp  DyldExportsTrie.cpp  DyldInfo.cpp  DylibCommand.cpp  (+56 more)
tests/: CMakeLists.txt  GenerateConfigELF.py  GenerateConfigELF32.py  GenerateConfigMachO.py  GenerateConfigPE.py  abstract_tests.py  config.yaml.in  conftest.py  dl_samples.py  requirements.txt  run_pytest.py  run_python_test.bat.in  run_tools_check.py  test_define_conflicts.cpp  test_iterators.cpp  ty.toml  utils.py  utils.py.in
tools/: Cargo.toml
(+3858 files in other folders)
